Updates to make it compatible with the host.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-discord
-python-dotenv
-apscheduler
-AO3
+discord.py>=1.7.0
+git+https://github.com/Rapptz/discord-ext-menus
+pytz
+python-dotenv>=0.17.1
+apscheduler>=3.7.0
+ao3_api>=2.0.0
 disputils
