Updated requirements.txt to have an exact version of ao3_api.

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ git+https://github.com/Rapptz/discord-ext-menus
 pytz
 python-dotenv>=0.17.1
 apscheduler>=3.7.0
-ao3_api>=2.0.0
+ao3_api==2.0.8
 disputils
