--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 
+//          Copyright Amber Whitlock aka enigmalea 2021
+// Distributed under the Boost Software License, Version 1.0.
+//    (See accompanying file LICENSE_1_0.txt or copy at
+//          https://www.boost.org/LICENSE_1_0.txt)
+
+
+
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
