--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-discord.py>=1.7.0
+git+https://github.com/Rapptz/discord.py
 git+https://github.com/Rapptz/discord-ext-menus
 pytz
 python-dotenv>=0.17.1
